# document-processing-pipeline

./: .gitignore  README.md  pyproject.toml
task_01_llm_extraction/: README.md
task_01_triage/: README.md  models.py  rules.py
task_01_triage/tests/: test_triage.py
task_02_enrichment/: README.md  client.py  mapper.py
task_02_enrichment/tests/: test_enrichment.py
task_02_idempotency/: README.md  requirements.txt  store.py
task_02_idempotency/tests/: test_idempotency.py
task_03_deduplication/: README.md  requirements.txt
task_03_deduplication/tests/: test_deduplication.py
task_03_triage/: README.md  engine.py  requirements.txt
task_04_deduplication/: README.md  detector.py  normalizer.py
task_04_llm_extraction/: README.md  extractor.py  models.py
task_04_llm_extraction/tests/: test_extraction.py
task_05_enrichment/: README.md  enricher.py  requirements.txt
task_05_idempotency/: README.md  processor.py
task_06_pipeline/: README.md  circuit_breaker.py  pipeline.py  pipeline_diagram.mmd
task_06_pipeline/tests/: test_pipeline.py
